--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Alex Suedkamp Resume</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div>
