--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
   </div>
   
   <div>
+    <h1>Alex Suedkamp</h1>
+    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>
+  </div>
+  
+  <div class="exp-header">
+    <h3>Professional Experience</h3>
+  </div>
+  
+  <div>
     <h4>Global eWaste Solutions</h4>
     <h5>IT Technician</h5>
     <h6>Oct 2020 - Current</h6>
     
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Manage wireless access point division</li>
+      <li>Organize and maintain data erasure station processing 80-100 data-bearing devices per day.</li>
+      <li>Perform basic PC/laptop troubleshooting to enable deployment of data erasure software</li>
     </ul>
   </div>
   
@@ -34,9 +43,10 @@
     <h6>March 2015 - October 2020</h6>
     
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Upgrade software on wirless access points</li>
+      <li>Test wireless access points by simulating a deployment environment</li>
+      <li>Configure access points to customer specifications</li>
+      <li>Manage inventory of networking equipment</li>
     </ul>
   </div>
   
