--- a/index.html
+++ b/index.html
@@ -9,23 +9,12 @@
 <body>
   <div>
     <h1>Alex Suedkamp</h1>
-    <p>Sefl motivated, creative individual with a passion for bridging people and technology.
-  </div>
+    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>  </div>
   
   <div class="exp-header">
     <h3>Professional Experience</h3>
   </div>
   
-  <div>
-    <h1>Alex Suedkamp</h1>
-    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>
-  </div>
-  
-  <div class="exp-header">
-    <h3>Professional Experience</h3>
-  </div>
-  
-  <div>
     <h4>Global eWaste Solutions</h4>
     <h5>IT Technician</h5>
     <h6>Oct 2020 - Current</h6>
