--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
   <div>
     <h1>Alex Suedkamp</h1>
-    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>  </div>
+    <img src="https://media-api.xogrp.com/images/4e4af8f7-de06-40bb-bdd6-8c2050537a7e~rt_360-cr_0.11.3024.3035-rs_1020.h?ordering=explicit"/>
+    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>
+  </div>
   
   <div class="exp-header">
     <h3>Professional Experience</h3>
   </div>
   
+  <div>
     <h4>Global eWaste Solutions</h4>
     <h5>IT Technician</h5>
     <h6>Oct 2020 - Current</h6>
@@ -34,6 +37,22 @@
     <ul>
       <li>Upgrade software on wirless access points</li>
       <li>Test wireless access points by simulating a deployment environment</li>
+      <li>Configure access points to customer specifications</li>
+      <li>Manage inventory of networking equipment</li>
+    </ul>
+  </div>
+  
+  <div class="exp-header">
+    <h3>Education</h3>
+  </div>
+  
+  <div>
+    <h5>High School Diploma</h5>
+    <h6>Adrian High School Completed May 2006</h6>
+  </div>
+   
+</body>
+</html>reless access points by simulating a deployment environment</li>
       <li>Configure access points to customer specifications</li>
       <li>Manage inventory of networking equipment</li>
     </ul>
