--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div>
+  <section class="title">
     <h1>Alex Suedkamp</h1>
-    <img src="https://media-api.xogrp.com/images/4e4af8f7-de06-40bb-bdd6-8c2050537a7e~rt_360-cr_0.11.3024.3035-rs_1020.h?ordering=explicit"/>
-    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>
-  </div>
+  </section>
+  <section class="info-header">
+    <figure class="fade-in-image">
+      <img src="https://media-api.xogrp.com/images/4e4af8f7-de06-40bb-bdd6-8c2050537a7e~rt_360-cr_0.11.3024.3035-rs_1020.h?ordering=explicit"/>
+    </figure>
+    
+    <h3>6540 East River Road</h3>
+    <h3>Fridley, MN 55432</h3>
+    <h3>507.227.0844</h3>
+   </section>
+    
   
-  <div class="exp-header">
-    <h3>Professional Experience</h3>
-  </div>
+  <section class="profile">
+    <h1>Profile</h1>
+    <p>Results-oriented professional with 7+ years of IT experience and a proven knowledge of configuration management, emerging technologies, and local area network.</p>
+  </section>
+  
+  
+  <section class="exp-header">
+    <h1>Professional Experience</h1>
+  
   
   <div>
     <h4>Global eWaste Solutions</h4>
@@ -42,13 +56,13 @@
     </ul>
   </div>
   
-  <div class="exp-header">
-    <h3>Education</h3>
-  </div>
+  </section>
   
-  <div>
-    <h5>High School Diploma</h5>
-    <h6>Adrian High School Completed May 2006</h6>
-  </div>
+  <section class="education">
+    <h1>Education</h1>
+    <h3>High School Diploma</h3>
+    <h3>Adrian High School Completed May 2006</h3>
+ </section>
    
 </body>
+</html>
